2005-05-15  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/Makefile.am: removed obsolete files

2005-05-12  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/DebugListener.cpp, src/components/ogre/DebugListener.h, src/components/ogre/EntityListener.cpp,src/components/ogre/OgreMain.diff, src/components/ogre/OgreTerrainSceneManager.h.diff, src/components/ogre/terrain.cfg:
		* removed obsolete files

2005-05-10  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widgets/MakeEntityWidget.*
		* fill the list of types as they appear

2005-05-10  Erik Hjortsberg  <erik@katastrof.nu>

	* Makefile.am: don't try to compile the ember script, doh!
	* ember.spec.in: bump wf lib required

2005-05-10  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/carpenter/*, src/components/ogre/modeldefinitions/*, src/components/ogre/jesus/*
		* general media additions

2005-05-10  Erik Hjortsberg  <erik@katastrof.nu>

	* media/materials/scripts/buildings.material: add more material and change some other

2005-05-10  Erik Hjortsberg  <erik@katastrof.nu>

	* media/materials/scripts/malebuilder.material: removed syntax error

2005-05-09  Erik Hjortsberg  <erik@katastrof.nu>

	* Makefile.am: copy the ember script file to the bin dir

2005-05-09  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/EmberOgre.*
		* allow command line switches, mostly used for defining whether ogre plugins should be loaded through binreloc or ~/.ember/plugins.cfg. Code shamelessly taken from Sear, thanks to all Sear developers.

2005-05-09  Erik Hjortsberg  <erik@katastrof.nu>

	*  src/components/ogre/widgets/Makefile.am:
		* oops, don't include TerrainEdit just yet. Thanks Kai and James.

2005-05-09  Erik Hjortsberg  <erik@katastrof.nu>

	* configure.ac: bump required Atlas to 0.5.9, Eris to 1.3.5 and Mercator to 0.2.2

2005-05-09  Erik Hjortsberg  <erik@katastrof.nu>
